--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ maintenance = { status = "actively-developed" }
 [dev-dependencies]
 version-sync = "0.8"
 env_logger = "0.7.1"
+structopt = "0.3.4"
 
 [dependencies]
 # Public
