--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ structopt = "0.3.4"
 bitflags = "1.2.1"
 bitvec = "0.15.2"
 # Private
-rusb = "0.5.2"
+rusb = { git = "https://github.com/jonas-schievink/rusb", branch = "set-option" }
 log = "0.4.8"
 byteorder = "1.3.2"
 
