--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,5 @@ jobs:
     - name: Run Clippy
       uses: actions-rs/clippy-check@v1
       with:
+        args: --all-targets
         token: ${{ secrets.GITHUB_TOKEN }}
