--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ file    = "src/lib.rs"
 search  = "https://docs.rs/jaylink/[a-z0-9\\.-]+"
 replace = "https://docs.rs/jaylink/{{version}}"
 
+[features]
+rusb = ["dep:rusb"]
+nusb = ["dep:nusb", "dep:futures-lite"]
+
 [dev-dependencies]
 version-sync = "0.9"
 env_logger = "0.8.1"
@@ -52,6 +56,8 @@ jep106 = "0.2.4"
 # Public
 bitflags = "1.2.1"
 # Private
-rusb = "0.9.0"
+rusb = { version = "0.9.0", optional = true }
+nusb = { version = "0.1.3", optional = true }
+futures-lite = { version = "1.13.0", optional = true }
 log = "0.4.8"
 byteorder = "1.3.2"
